# LuxTTS

./: .dockerignore  .gitignore  Dockerfile  README.md  api_server.py  app.py  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
zipvoice/: luxvoice.py  modeling_utils.py
zipvoice/models/modules/: scaling.py  zipformer.py
